--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                 <div class="col-12 col-sm align-self-center">
                     <img src="img/logo.png" alt="" class="img-fluid">
                 </div>
+                <div class="col-12 col-sm align-self-center">
+                    <a role="button" class="btn btn-warning btn-block" href="#booking-table">Reserve Table</a>
+                </div>
             </div>
         </div>
     </header>
@@ -68,8 +71,13 @@
                 <h3>This Month's Promotions</h3>
             </div>
             <div class = "col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                <div class="media">
+                    <div class="media-body">
+                        <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                        <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                    </div>
+                    <img class="d-flex ml-3 img-thumbnail align-self-center" src="img/buffet.png" alt="buffet">
+                </div>
             </div>
         </div>
 
@@ -84,6 +92,41 @@
                         <h2 class="mt-0">Alberto Somayya</h2>
                         <h4>Executive Chef</h4>
                         <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row row-content justify-content-center">
+            <div class="col-12 col-sm-8">
+                <div class="card" id="booking-table">
+                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                    <div class="card-body">
+                        <form>
+                            <dl class="row">
+                                <dt class="col-12 col-sm-2">Number of Guests</dt>
+                                <dd class="col-2 col-sm-1"><input type="radio" id="1" name="number-people" value="1"> 1</dd>
+                                <dd class="col-2 col-sm-1"><input type="radio" id="2" name="number-people" value="2"> 2</dd>
+                                <dd class="col-2 col-sm-1"><input type="radio" id="3" name="number-people" value="3"> 3</dd>
+                                <dd class="col-2 col-sm-1"><input type="radio" id="4" name="number-people" value="4"> 4</dd>
+                                <dd class="col-2 col-sm-1"><input type="radio" id="5" name="number-people" value="5"> 5</dd>
+                                <dd class="col-2 col-sm-1"><input type="radio" id="6" name="number-people" value="6"> 6</dd>
+                                <dd class="col-sm-4"></dd>
+                                <dt class="col-12 col-sm-2">Date and Time</dt>
+                                <dd class="col-12 col-sm-4">
+                                    <input type="text" class="form-control" id = "date" name="date" placeholder="Date">
+                                </dd>
+                                <dd class="col-12 col-sm-4">
+                                    <input type="text" class="form-control" id = "time" name="time" placeholder="Time">
+                                </dd>
+                                <dd class="col-sm"></dd>
+                                <dd class="offset-sm-2 col-12">
+                                    <button type="submit" class="btn btn-primary">
+                                        Reserve
+                                    </button>
+                                </dd>
+                            </dl>
+                        </form>
                     </div>
                 </div>
             </div>
