--- a/index.html
+++ b/index.html
@@ -75,6 +75,64 @@
             </div>
         </div>
     </div>
+
+    <div id="reserveModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a Table</h4>
+                    <button type="button" class="close" data-dismiss="modal">
+                        &times;
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <dl class="row">
+                            <dt class="col-12 col-sm-2">Number of Guests</dt>
+                            <dd class="col-2 col-sm-1"><input type="radio" id="1" name="number-people" value="1"> 1</dd>
+                            <dd class="col-2 col-sm-1"><input type="radio" id="2" name="number-people" value="2"> 2</dd>
+                            <dd class="col-2 col-sm-1"><input type="radio" id="3" name="number-people" value="3"> 3</dd>
+                            <dd class="col-2 col-sm-1"><input type="radio" id="4" name="number-people" value="4"> 4</dd>
+                            <dd class="col-2 col-sm-1"><input type="radio" id="5" name="number-people" value="5"> 5</dd>
+                            <dd class="col-2 col-sm-1"><input type="radio" id="6" name="number-people" value="6"> 6</dd>
+                            <dd class="col-sm-4"></dd>
+                            <dt class="col-12 col-sm-2">Section</dt>
+                            <dd class="col-sm-8">
+                                <div class="form-group">
+                                    <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                        <label class="btn btn-success active">
+                                            <input type="radio" name="smoke-option" id="Non-smoking" checked>Non-smoking
+                                        </label>
+                                        <label class="btn btn-danger">
+                                            <input type="radio" name="smoke-option" id="Smoking" autocomplete="off">Smoking
+                                        </label>
+                                    </div>
+                                </div>
+                            </dd>
+                            <dd class="col-sm-2"></dd>
+                            <dt class="col-12 col-sm-2">Date and Time</dt>
+                            <dd class="col-12 col-sm-4">
+                                <input type="text" class="form-control" id = "date" name="date" placeholder="Date">
+                            </dd>
+                            <dd class="col-12 col-sm-4">
+                                <input type="text" class="form-control" id = "time" name="time" placeholder="Time">
+                            </dd>
+                            <dd class="col-sm"></dd>
+                            <dd class="offset-sm-2 col-12">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">
+                                    Cancel
+                                </button>
+                                <button type="submit" class="btn btn-primary">
+                                    Reserve
+                                </button>
+                            </dd>
+                        </dl>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <header class = "jumbotron">
         <div class = "container">
             <div class = "row row-header">
@@ -86,9 +144,7 @@
                     <img src="img/logo.png" alt="" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm align-self-center">
-                    <a role="button" class="btn btn-warning nav-link btn-block" data-toggle="tooltip" data-html="true"
-                        title="Or Call us at <br><strong>+852 12345678</strong>"
-                        data-placement="bottom" href="#booking-table">Reserve Table</a>
+                    <a role="button" class="btn btn-warning nav-link btn-block" data-toggle="modal" data-target="#reserveModal">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -179,40 +235,7 @@
             </div>
         </div>
 
-        <div class="row row-content justify-content-center">
-            <div class="col-12 col-sm-8">
-                <div class="card" id="booking-table">
-                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
-                    <div class="card-body">
-                        <form>
-                            <dl class="row">
-                                <dt class="col-12 col-sm-2">Number of Guests</dt>
-                                <dd class="col-2 col-sm-1"><input type="radio" id="1" name="number-people" value="1"> 1</dd>
-                                <dd class="col-2 col-sm-1"><input type="radio" id="2" name="number-people" value="2"> 2</dd>
-                                <dd class="col-2 col-sm-1"><input type="radio" id="3" name="number-people" value="3"> 3</dd>
-                                <dd class="col-2 col-sm-1"><input type="radio" id="4" name="number-people" value="4"> 4</dd>
-                                <dd class="col-2 col-sm-1"><input type="radio" id="5" name="number-people" value="5"> 5</dd>
-                                <dd class="col-2 col-sm-1"><input type="radio" id="6" name="number-people" value="6"> 6</dd>
-                                <dd class="col-sm-4"></dd>
-                                <dt class="col-12 col-sm-2">Date and Time</dt>
-                                <dd class="col-12 col-sm-4">
-                                    <input type="text" class="form-control" id = "date" name="date" placeholder="Date">
-                                </dd>
-                                <dd class="col-12 col-sm-4">
-                                    <input type="text" class="form-control" id = "time" name="time" placeholder="Time">
-                                </dd>
-                                <dd class="col-sm"></dd>
-                                <dd class="offset-sm-2 col-12">
-                                    <button type="submit" class="btn btn-primary">
-                                        Reserve
-                                    </button>
-                                </dd>
-                            </dl>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
+        
     </div>
 
     <footer class="footer">
@@ -260,11 +283,7 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-        $(document).ready(function() {
-            $('[data-toggle="tooltip"]').tooltip();
-        });
-    </script>
+
 </body>
 
 </html>
