--- a/aboutus.html
+++ b/aboutus.html
@@ -218,17 +218,17 @@
                 <div class="col-12 col-sm-4 align-self-center">
                     <div class="text-center">
                         <a class = "btn btn-social-icon btn-google" href="http://google.com/+"><i class="fa fa-google-plus fa-lg"></i></a>
-                        <a class = "btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook fa-lg"></i></a>
-                        <a class = "btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin fa-lg"></i></a>
+                        <a class = "btn btn-social-icon btn-instagram" href="https://www.instagram.com/namanchanduka/"><i class="fa fa-instagram fa-lg"></i></a>
+                        <a class = "btn btn-social-icon btn-linkedin" href="https://www.linkedin.com/in/naman-chanduka-4674151aa/"><i class="fa fa-linkedin fa-lg"></i></a>
                         <a class = "btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter fa-lg"></i></a>
-                        <a class = "btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube fa-lg"></i></a>
-                        <a class = "btn btn-social-icon" href="mailto:"><i class="fa fa-envelope-o fa-lg"></i></a>
+                        <a class = "btn btn-social-icon btn-google" href="https://www.youtube.com/channel/UCL_pw2d9anRgtbxarfKyEaQ"><i class="fa fa-youtube fa-lg"></i></a>
+                        <a class = "btn btn-social-icon" href="mailto:namanchanduka2001@gmail.com"><i class="fa fa-envelope-o fa-lg"></i></a>
                     </div>
                 </div>
            </div>
            <div class="row justify-content-center">             
                 <div class="col-auto">
-                    <p>© Copyright 2018 Ristorante Con Fusion</p>
+                    <p>© Created by Naman Chanduka 2021</p>
                 </div>
            </div>
         </div>
